// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`all estimated 1`] = `
<div>
  <div
    class="player-estimations_root__19q34j30"
  >
    <div
      class="player-estimations_votingRoot__19q34j33"
    >
      <span
        class="player-estimations_votingLabel__19q34j34"
      >
        Voted
      </span>
      <span
        class="player-estimations_votingEstimatedAllEstimated__19q34j37 player-estimations_votingEstimated__19q34j35 style_transition_all__59wy0241"
      >
        5
         / 
        5
      </span>
    </div>
    <div
      class="player-estimations_votingReveal__19q34j38"
    >
      <button
        class="style_disabledButtonVariants_emerald__16ett8m9 style_disabledBase__16ett8m2 style_base__16ett8m0"
        disabled=""
      >
        Reveal
      </button>
    </div>
    <div
      class="player-estimations_estimations__19q34j32"
    >
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo0
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo1
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo2
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo3
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo4
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`disable button if can not reveal 1`] = `
<div>
  <div
    class="player-estimations_root__19q34j30"
  >
    <div
      class="player-estimations_votingRoot__19q34j33"
    >
      <span
        class="player-estimations_votingLabel__19q34j34"
      >
        Voted
      </span>
      <span
        class="player-estimations_votingEstimatedAllEstimated__19q34j37 player-estimations_votingEstimated__19q34j35 style_transition_all__59wy0241"
      >
        5
         / 
        5
      </span>
    </div>
    <div
      class="player-estimations_votingReveal__19q34j38"
    >
      <button
        class="style_disabledButtonVariants_emerald__16ett8m9 style_disabledBase__16ett8m2 style_base__16ett8m0"
        disabled=""
      >
        Reveal
      </button>
    </div>
    <div
      class="player-estimations_estimations__19q34j32"
    >
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo0
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo1
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo2
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo3
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo4
        </span>
        <span
          class="player-estimation_cardEstimated__tdwy753 player-estimation_card__tdwy751"
          data-estimated="true"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`display a estimation 1`] = `
<div>
  <div
    class="player-estimations_root__19q34j30"
  >
    <div
      class="player-estimations_votingRoot__19q34j33"
    >
      <span
        class="player-estimations_votingLabel__19q34j34"
      >
        Voted
      </span>
      <span
        class="player-estimations_votingEstimatedNotAllEstimated__19q34j36 player-estimations_votingEstimated__19q34j35 style_transition_all__59wy0241"
      >
        0
         / 
        5
      </span>
    </div>
    <div
      class="player-estimations_votingReveal__19q34j38"
    >
      <button
        class="style_disabledButtonVariants_emerald__16ett8m9 style_disabledBase__16ett8m2 style_base__16ett8m0"
        disabled=""
      >
        Reveal
      </button>
    </div>
    <div
      class="player-estimations_estimations__19q34j32"
    >
      <div
        class="player-estimation_root__tdwy750"
      >
        <span>
          foo
        </span>
        <span
          class="player-estimation_cardNotEstimated__tdwy752 player-estimation_card__tdwy751"
          data-estimated="false"
        />
      </div>
    </div>
  </div>
</div>
`;
